objects/Configure_House__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Anniversary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anniversary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birthday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpenseItemTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExpenseItemTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExpenseTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExpenseTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HouseTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HouseTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>House Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inaugration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inaugration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MemberTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonTable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PersonTable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>This_Year_Balance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This Year Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Total_Member</label>
        <type>Checkbox</type>
    </fields>
    <label>Configure House</label>
</CustomObject>